# Taurus

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.ninja  makefile
core/: CMakeLists.txt
core/include/core/: core.hpp  lexer.hpp  parser.hpp
core/src/: lexer.cpp  parser.cpp
headers/lexer/: lexer.hpp
src/lexer/: lexer.cpp  lexer.test.cpp
src/lexer/headers/: lexer.hpp
src/test/lexer/: lexer.cpp
test/: CMakeLists.txt  lexer.test
test/lexer/: lexer.cpp
testware/trsre_get_token/: main.c
testware/trsre_match_char/: main.c
testware/trsre_match_group/: main.c
testware/trsrec/: main.c
trsap/headers/: trsap.h  trsap.hpp
trsap/src/: trsap.c
trscli/headers/: trscli.h  trscli.hpp
trscli/src/: trscli.c
trsre/ext/: string.c
trsre/headers/: trsre.h  trsre.hpp
trsre/src/: find.c  get_token.c  match.c  match_char.c  match_group.c
trsrec/headers/: c.hpp  program.hpp  state.hpp
trsrec/src/: c.cpp  log_token.cpp  main.cpp  program_generate_c_cpp.cpp  program_get_lit.cpp  program_init.cpp  program_load.cpp  program_terminate.cpp
